# tomlyre

./: .gitignore  Cargo.toml  License  Readme-zh.md  Readme.md  tmpl.md
.github/workflows/: .test-push.yml  cross-build.yml  test-push.yml
assets/: git-subtree.md
assets/ci/: tomlyre.dockerfile
assets/l10n/: readme.md
assets/l10n/cli/af/: log-core.yaml  theme.yaml
assets/l10n/cli/am/: log-core.yaml  theme.yaml
assets/l10n/cli/ar/: args.toml  conv.toml  log-core.yaml  opt.toml  parser.yaml  theme.yaml
assets/l10n/cli/az/: log-core.yaml  theme.yaml
assets/l10n/cli/be/: log-core.yaml  theme.yaml
assets/l10n/cli/bg/: log-core.yaml  theme.yaml
assets/l10n/cli/bn/: args.toml  conv.toml  log-core.yaml  parser.yaml  theme.yaml
assets/l10n/cli/bs/: log-core.yaml  theme.yaml
assets/l10n/cli/ca/: log-core.yaml  theme.yaml
assets/l10n/cli/ceb/: log-core.yaml  theme.yaml
assets/l10n/cli/co/: log-core.yaml  theme.yaml
assets/l10n/cli/cs/: args.toml  conv.toml  log-core.yaml  parser.yaml  theme.yaml
assets/l10n/cli/cy/: log-core.yaml  theme.yaml
assets/l10n/cli/da/: log-core.yaml  theme.yaml
assets/l10n/cli/de/: args.toml  conv.toml  log-core.yaml  opt.toml  parser.yaml  theme.yaml
assets/l10n/cli/el/: args.toml  conv.toml  log-core.yaml  opt.toml  parser.yaml  theme.yaml
assets/l10n/cli/en/: args.toml  conv.toml  log-core.yaml  opt.toml  parser.yaml  theme.yaml
assets/l10n/cli/en-GB/: log-core.yaml
assets/l10n/cli/eo/: log-core.yaml  theme.yaml
assets/l10n/cli/es/: args.toml  conv.toml  log-core.yaml  opt.toml  parser.yaml  theme.yaml
assets/l10n/cli/et/: log-core.yaml  theme.yaml
assets/l10n/cli/eu/: log-core.yaml  theme.yaml
assets/l10n/cli/fa/: log-core.yaml  theme.yaml
assets/l10n/cli/fi/: log-core.yaml  theme.yaml
assets/l10n/cli/fil/: log-core.yaml  theme.yaml
assets/l10n/cli/fr/: args.toml  conv.toml  log-core.yaml  opt.toml  parser.yaml  theme.yaml
assets/l10n/cli/fy/: log-core.yaml  theme.yaml
assets/l10n/cli/ga/: log-core.yaml  theme.yaml
assets/l10n/cli/gd/: log-core.yaml  theme.yaml
assets/l10n/cli/gl/: log-core.yaml  theme.yaml
assets/l10n/cli/gu/: log-core.yaml  theme.yaml
assets/l10n/cli/ha/: log-core.yaml  theme.yaml
assets/l10n/cli/haw/: log-core.yaml
assets/l10n/cli/he/: theme.yaml
assets/l10n/cli/hi/: args.toml  conv.toml  log-core.yaml  parser.yaml  theme.yaml
assets/l10n/cli/hr/: log-core.yaml  theme.yaml
assets/l10n/cli/ht/: log-core.yaml  theme.yaml
assets/l10n/cli/hu/: log-core.yaml  theme.yaml
assets/l10n/cli/hy/: log-core.yaml  theme.yaml
assets/l10n/cli/id/: log-core.yaml  theme.yaml
assets/l10n/cli/ig/: log-core.yaml  theme.yaml
assets/l10n/cli/is/: log-core.yaml  theme.yaml
assets/l10n/cli/it/: args.toml  conv.toml  log-core.yaml  opt.toml  parser.yaml  theme.yaml
assets/l10n/cli/iw/: log-core.yaml
assets/l10n/cli/ja/: args.toml  conv.toml  log-core.yaml  opt.toml  parser.yaml  theme.yaml
assets/l10n/cli/jw/: log-core.yaml  theme.yaml
assets/l10n/cli/ka/: log-core.yaml  theme.yaml
assets/l10n/cli/kk/: log-core.yaml  theme.yaml
assets/l10n/cli/km/: log-core.yaml  theme.yaml
assets/l10n/cli/kn/: log-core.yaml  theme.yaml
assets/l10n/cli/ko/: args.toml  conv.toml  log-core.yaml  opt.toml  parser.yaml  theme.yaml
assets/l10n/cli/ku/: log-core.yaml  theme.yaml
assets/l10n/cli/ky/: log-core.yaml  theme.yaml
assets/l10n/cli/la/: log-core.yaml  theme.yaml
assets/l10n/cli/lb/: log-core.yaml  theme.yaml
assets/l10n/cli/lo/: log-core.yaml  theme.yaml
assets/l10n/cli/lt/: log-core.yaml  theme.yaml
assets/l10n/cli/lv/: log-core.yaml  theme.yaml
assets/l10n/cli/mg/: log-core.yaml  theme.yaml
assets/l10n/cli/mi/: log-core.yaml  theme.yaml
assets/l10n/cli/mk/: log-core.yaml  theme.yaml
assets/l10n/cli/ml/: log-core.yaml  theme.yaml
assets/l10n/cli/mn/: log-core.yaml  theme.yaml
assets/l10n/cli/mr/: log-core.yaml  theme.yaml
assets/l10n/cli/ms/: log-core.yaml  theme.yaml
assets/l10n/cli/mt/: log-core.yaml  theme.yaml
assets/syntax/elvish_syntax_for_sublime/: LICENSE  README.md  elvish.sublime-syntax  readme.md
assets/syntax/powershell/: PowerShell.sublime-syntax  readme.md
assets/syntax/sublime/: readme.md
assets/syntax/sublime-fish/: readme.md
assets/syntax/sublime-ron/: RON.sublime-syntax  readme.md
assets/syntax/sublime_toml_highlighting/: README.md  readme.md
assets/theme/ayu/: ayu-dark.tmTheme  ayu-dark.tmTheme.patch  ayu-light.tmTheme  ayu-mirage.tmTheme  readme.md
assets/theme/dracula/: Dracula.tmTheme  readme.md
assets/theme/one-dark-theme/: readme.md
assets/theme/onehalf/: readme.md
assets/theme/sublime-monokai-extended/: Monokai Extended Bright.tmTheme  Monokai Extended Light.tmTheme  Monokai Extended.tmTheme  Monokai Extended.tmTheme.org  readme.md
cli/: Cargo.toml  build.rs
cli/src/: logger.rs  main.rs
cli/src/assets/: localisation.rs  mod.rs
cli/src/opt/: args.rs  conversion.rs  get.rs  mod.rs  set.rs  theme.rs
cli/src/parser/: completion.rs  mod.rs  set_opts.rs  sub_cmd.rs
core/: Cargo.toml  build.rs
core/assets/syntect/: syntax-set.packdump  theme-set.packdump  version.txt
core/src/: get.rs  lib.rs  set.rs  table.rs
core/src/assets/: localisation.rs  mod.rs
core/src/assets/src/assets/: mod.rs
core/src/conversion/: convert.rs  fmt.rs  mod.rs  serialisation.rs
core/src/highlight/: mod.rs  output.rs  syntax.rs  theme.rs
(+435 files in other folders)
