[package]
edition = "2021"
name = "tomlyre-cli"
version = "0.0.1-beta.2"
license = "Apache-2.0"
authors = ["Moe <m@tmoe.me>"]
categories = ["command-line-utilities", "config"]
repository = "https://github.com/2moe/tomlyre"
description = "This CLI utility facilitates effortless manipulation and exploration of TOML, YAML, JSON and RON files."
readme = "../Readme.md"

[[bin]]
doc = false
name = "tomlyre"
path = "src/main.rs"

[features]
default = ["json", "yaml", "ron", "json5", "lexpr"]
# all = ["json", "yaml", "ron", "json5", "bson", "lexpr", "xml"]
# conversion = []
json = ["tomlyre/json"]
json5 = ["tomlyre/json5"]
yaml = ["tomlyre/yaml"]
ron = ["tomlyre/ron"]
bson = ["tomlyre/bson"]
lexpr = ["tomlyre/lexpr"]
xml = ["tomlyre/xml"]

[dependencies]
anyhow = "1.0.71"
clap_complete = "4.3.0"
getset = "0.1.2"
log = "0.4.18"
thiserror = "1.0.40"
phf = "0.11.1"
paste = "1.0.12"

[dependencies.tomlyre]
path = "../core"
# version = "0.0.1-beta.1"
default-features = false

[dependencies.clap]
features = ["unicode", "derive", "color"]
version = "4.3.0"

[dependencies.glossa]
version = "0.0.1-alpha.10"
# path = "../../glossa/glossa"
# git = "https://github.com/2moe/glossa"

[build-dependencies.glossa-codegen]
default-features = false
version = "0.0.1-alpha.5"
# path = "../../glossa/codegen"
features = ["toml", "yaml", "highlight"]

[dependencies.hlight]
version = "0.0.1"
# path = "../../hlight/hlight"

[dependencies.log-l10n]
version = "0.0.0"
# path = "../../log-l10n"
default-features = false
features = ["env-logger"]

[build-dependencies.tomlyre]
path = "../core"
# version = "0.0.1-beta.1"
default-features = false

[package.metadata.deb]
name = "tomlyre"
depends = ""
revision = "1"
