[package]
name = "tomlyre"
version = "0.0.1-beta.1"
edition = "2021"
license = "Apache-2.0"
authors = ["Moe <m@tmoe.me>"]
repository = "https://github.com/2moe/tomlyre"
description = "For parsing, converting, and syntax highlighting data in various formats, such as TOML, YAML, and more."

[features]
default = ["json", "yaml"]
# default = ["all"]
# all = ["json", "yaml", "ron", "json5", "bson", "lexpr", "xml"]
json = ["dep:serde_json"]
json5 = ["dep:json5"]
yaml = ["dep:serde_yaml"]
ron = ["dep:ron"]
bson = ["dep:bson"]
lexpr = ["dep:serde-lexpr"]
xml = ["dep:quick-xml", "dep:quickxml_to_serde"]
# conversion = ["dep:toml", "dep:serde"]
# highlight = ["dep:syntect"]

[dependencies]
# thiserror = "1.0.40"
anyhow = "1.0.71"
toml_edit = "0.19.10"
toml = { version = "0.7.4" }
owo-colors = "3.5.0"
getset = "0.1.2"
log = "0.4.18"
ron = { version = "0.8.0", optional = true }
serde_json = { version = "1.0.96", optional = true }
json5 = { version = "0.4.1", optional = true }
serde-lexpr = { version = "0.1.3", optional = true }
bson = { version = "2.6.1", optional = true }
quickxml_to_serde = { version = "0.5.0", optional = true }
quick-xml = { version = "0.28.2", features = ["serialize"], optional = true }
phf = "0.11.1"
serde_yaml = { version = "0.9.21", optional = true }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
comfy-table = "6.1.4"

[target.'cfg(target_family = "wasm")'.dependencies]
comfy-table = { default-features = false, version = "6.1.4" }

[dependencies.hlight]
version = "0.0.1"
# path = "../../hlight/hlight"

[dependencies.glossa]
version = "0.0.1-alpha.10"
# path = "../../glossa/glossa"

[build-dependencies.glossa-codegen]
default-features = false
features = ["yaml", "toml", "highlight"]
version = "0.0.1-alpha.5"
# path = "../../glossa/codegen"

[dependencies.serde]
features = ["derive"]
version = "1.0.160"
# optional = true
